<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/navigation_scan"
            android:icon="@drawable/ic_scan"
            android:title="@string/cancer_scanner"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_news"
            android:title="@string/cancer_news"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/navigation_history"
            android:icon="@drawable/ic_history"
            android:title="@string/scanner_history"
            app:showAsAction="ifRoom" />
    </group>

</menu>